Fixes text, links, and adds mobile spacing.

--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -10,7 +10,16 @@
 		box-sizing: border-box;
 	}
 	
+	/* Gives row bottom margin until screen is larger (atMedium). */
+	&__b-margin-until-medium {
+		margin-bottom: 1rem;
+	}
+	
 	@mixin atMedium {
+		&__b-margin-until-medium {
+			margin-bottom: 0;
+		}
+		
 		&__medium-4 {
 			float: left;
 			width: 33.33%;
